<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Trung.ForgetPasswordActivity">

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/repass"
        android:textSize="48sp"
        android:fontFamily="sans-serif-black"
        android:textColor="#8692F7"
        />

    <EditText
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:background="@drawable/bkg_textbox"
        android:hint="@string/email"
        android:paddingStart="18dp"
        android:paddingEnd="30dp"
        android:importantForAutofill="yes"
        android:inputType="textEmailAddress"
        android:layout_marginTop="30dp" />

    <RelativeLayout
        android:background="@color/white"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        >

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:background="@drawable/bkg_textbox"
            android:hint="@string/encode"
            android:paddingStart="18dp"
            android:paddingEnd="30dp"
            android:layout_centerVertical="true"
            android:importantForAutofill="yes"
            android:inputType="text"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:background="@drawable/bkg_exchange"
            android:text="124dvsa"
            android:textColor="@color/white"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@id/icon_exchange"/>

        <ImageView
            android:id="@+id/icon_exchange"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/icon_exchange"
            android:paddingLeft="5dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"/>
    </RelativeLayout>

    <Button
        android:layout_width="350dp"
        android:layout_height="52dp"
        android:backgroundTint="#8692F7"
        android:fontFamily="sans-serif-black"
        android:textSize="22sp"
        android:textColor="@color/white"
        android:text="@string/request"
        android:layout_marginTop="30dp"
        />
    <LinearLayout
        android:layout_marginTop="30dp"
        android:layout_width="350dp"
        android:orientation="horizontal"
        android:background="@color/white"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/textbk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp"
            android:text="@string/rel"/>
        <TextView
            android:id="@+id/textsign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign"
            android:gravity="end"
            android:textSize="20sp"
            android:textColor="#C12C2C"/>
    </LinearLayout>
</LinearLayout>