<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Trung.SignupActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign"
        android:textSize="55sp"
        android:fontFamily="sans-serif-black"
        android:textColor="#8692F7"
        />

    <EditText
        android:id="@+id/email"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/bkg_textbox"
        android:hint="@string/email"
        android:importantForAutofill="yes"
        android:inputType="textEmailAddress"
        android:paddingStart="18dp"
        android:paddingEnd="30dp"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/username"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/bkg_textbox"
        android:hint="@string/username"
        android:importantForAutofill="yes"
        android:inputType="text"
        android:paddingStart="18dp"
        android:paddingEnd="30dp"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/bkg_textbox"
        android:hint="@string/password"
        android:importantForAutofill="yes"
        android:inputType="textPassword"
        android:paddingStart="18dp"
        android:paddingEnd="30dp"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/confirm"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/bkg_textbox"
        android:hint="@string/confirm"
        android:importantForAutofill="yes"
        android:inputType="textPassword"
        android:paddingStart="18dp"
        android:paddingEnd="30dp"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="350dp"
        android:layout_height="62dp"
        android:backgroundTint="#8692F7"
        android:fontFamily="sans-serif-black"
        android:textSize="25sp"
        android:text="@string/sign"
        android:textColor="@color/white"
        android:layout_marginTop="30dp"
        />

    <TextView
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hoặc"
        tools:ignore="HardcodedText"
        android:textSize="18sp"/>
    <LinearLayout
        android:background="@color/white"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/facebookLogin"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/icon_facebook"
            android:layout_weight="1"
            android:scaleType="fitCenter"/>

        <ImageView
            android:id="@+id/googleIcon"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:scaleType="fitCenter"
            android:src="@drawable/icon_logo" />
        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/icon_linkedln"
            android:layout_weight="1"
            android:scaleType="fitCenter"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@color/white"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/daco"/>

        <TextView
            android:id="@+id/textlogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="20dp"
            android:layout_marginLeft="6dp"
            android:textColor="#C12C2C"/>
    </LinearLayout>

</LinearLayout>
