<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".Trung.LoginActivity">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/login"
        android:textColor="#8692F7"
        android:textSize="55sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txt_email"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/bkg_textbox"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:drawableLeft="@drawable/ic_baseline_email_24"
        android:drawablePadding="16dp"
        android:hint="@string/email"
        android:importantForAutofill="yes"
        android:inputType="textEmailAddress"
        android:paddingStart="18dp"
        android:paddingEnd="30dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/txt_pass"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/bkg_textbox"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:drawableLeft="@drawable/ic_baseline_email_24"
        android:drawablePadding="16dp"
        android:hint="@string/password"
        android:importantForAutofill="yes"
        android:inputType="textPassword"
        android:paddingStart="18dp"
        android:paddingEnd="30dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_email" />
    <ImageView
        android:id="@+id/eye_icon"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="32dp"
        android:padding="8dp"
        android:src="@drawable/pikpng_com_cute_anime_eyes_png_850945"
        android:contentDescription="Show/Hide Password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txt_pass"
        app:layout_constraintBottom_toBottomOf="@+id/txt_pass" />

    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_pass">

        <CheckBox
            android:id="@+id/checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Nhớ mật khẩu "
            android:textSize="16sp" />

    </LinearLayout>

    <Button
        android:id="@+id/button_login"
        android:layout_width="350dp"
        android:layout_height="62dp"
        android:backgroundTint="#8692F7"
        android:fontFamily="sans-serif-black"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout7" />

    <LinearLayout
        android:id="@+id/linearLayout8"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@color/white"
        android:gravity="end"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_login">

        <TextView
            android:id="@+id/textforgetpassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Quên mật khẩu"
            android:textSize="20sp"
            tools:ignore="HardcodedText" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout8">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/chuaco"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textsign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="@string/sign"
            android:textColor="#C12C2C"
            android:textSize="20sp" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>